--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0181.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0181.html
@@ -48,8 +48,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 800 278 845 317">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tU</ins>
-            <del title="nlp 0.90">tU</del>
+            <ins title="nlp 2.00">ut</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 875 273 1127 317">
@@ -230,8 +229,7 @@
       <span class="ocr_line" title="bbox 166 489 894 546">
         <span id="w_37" class="ocr_word" title="bbox 166 492 251 546">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fuU</ins>
-            <del title="nlp 0.90">fuU</del>
+            <ins title="nlp 2.00">fuit</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 282 491 530 546">
@@ -247,8 +245,7 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 662 489 894 544">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">negotiaHo.</ins>
-            <del title="nlp 0.90">negotiaHo.</del>
+            <ins title="nlp 2.00">negotiatio.</ins>
           </span>
         </span>
       </span>
@@ -315,8 +312,7 @@
       <span class="ocr_line" title="bbox 166 640 1912 702">
         <span id="w_51" class="ocr_word" title="bbox 166 647 314 702">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">efficU:</ins>
-            <del title="nlp 0.90">efficU:</del>
+            <ins title="nlp 2.00">efficit:</ins>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 345 646 418 689">
@@ -548,24 +544,17 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 1281 858 1484 902">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eiusmodi</ins>
-            <del title="nlp 0.90">eiusmodi</del>
+            <ins title="nlp 2.00">eiusmodi utitur:</ins>
           </span>
         </span>
-        <span id="w_93" class="ocr_word" title="bbox 1507 859 1659 901">
+        <span id="w_93_0" class="ocr_word" title="bbox 1507 859 1659 901">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">utUur:</ins>
-            <del title="nlp 0.90">utUur:</del>
+            <ins class="alt" title="nlp 2.00">quaerendum,“</ins>
           </span>
         </span>
-        <span id="w_94" class="ocr_word" title="bbox 1685 856 1768 909">
+        <span id="w_93_1" class="ocr_word" title="bbox 1507 859 1659 901">
           <span class="alternatives">
-            <ins title="nlp 2.00">„ad</ins>
-          </span>
-        </span>
-        <span id="w_95" class="ocr_word" title="bbox 1790 869 1912 911">
-          <span class="alternatives">
-            <ins title="nlp 2.00">qyaerebdynm“</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1387,7 +1376,7 @@
       <span class="ocr_line" title="bbox 157 1946 386 2002">
         <span id="w_233" class="ocr_word" title="bbox 157 1946 386 2002">
           <span class="alternatives">
-            <ins title="nlp 2.00">porrigt.“</ins>
+            <ins title="nlp 2.00">“</ins>
           </span>
         </span>
       </span>
@@ -2017,9 +2006,14 @@
             <del title="nlp 0.90">unde</del>
           </span>
         </span>
-        <span id="w_344" class="ocr_word" title="bbox 801 2934 1009 2982">
+        <span id="w_344_0" class="ocr_word" title="bbox 801 2934 1009 2982">
           <span class="alternatives">
-            <ins title="nlp 2.00">posse&amp;#x003C;se&amp;#x003E; </ins>
+            <ins class="alt" title="nlp 2.00">posse&amp;003C;se&amp;003E;</ins>
+          </span>
+        </span>
+        <span id="w_344_1" class="ocr_word" title="bbox 801 2934 1009 2982">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 1040 2934 1157 2971">
@@ -2046,12 +2040,6 @@
         <span id="w_349" class="ocr_word" title="bbox 1746 2938 1788 2970">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">14</ins>
-          </span>
-        </span>
-        <span id="w_350" class="ocr_word" title="bbox 1815 2944 1916 2970">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">error</ins>
-            <del title="nlp 0.90">error</del>
           </span>
         </span>
       </span>
@@ -2170,7 +2158,7 @@
         </span>
         <span id="w_370" class="ocr_word" title="bbox 1676 3042 1915 3084">
           <span class="alternatives">
-            <ins title="nlp 2.00">vocabatur“,</ins>
+            <ins title="nlp 2.00">“,</ins>
           </span>
         </span>
       </span>
