--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0182.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0182.html
@@ -297,14 +297,14 @@
             <ins class="alt" title="nlp 1.00">ὑπὸ</ins>
           </span>
         </span>
-        <span id="w_55" class="ocr_word" title="bbox 1756 667 1882 709" lang="grc">
+        <span id="w_55_0" class="ocr_word" title="bbox 1756 667 1882 709">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐδίων</ins>
+            <ins class="alt" title="nlp 2.00">ἰδίων</ins>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 1913 665 2078 708" lang="grc">
+        <span id="w_55_1" class="ocr_word" title="bbox 1756 667 1882 709">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τέκνων</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -984,9 +984,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_186" class="ocr_word" title="bbox 627 1876 724 1930">
+        <span id="w_186_0" class="ocr_word" title="bbox 627 1876 724 1930">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἰ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;εἰ&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_186_1" class="ocr_word" title="bbox 627 1876 724 1930">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 756 1888 874 1918" lang="grc">
@@ -1012,11 +1017,6 @@
         <span id="w_191" class="ocr_word" title="bbox 1679 1889 1702 1916" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὃ</ins>
-          </span>
-        </span>
-        <span id="w_192" class="ocr_word" title="bbox 1740 1888 2097 1929" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καταφεύγοντας</ins>
           </span>
         </span>
       </span>
@@ -1353,14 +1353,24 @@
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
-        <span id="w_253" class="ocr_word" title="bbox 501 2527 863 2584" lang="grc">
+        <span id="w_253_0" class="ocr_word" title="bbox 501 2527 863 2584">
           <span class="alternatives">
-            <ins title="nlp 2.00">περιἱσταμένους</ins>
+            <ins class="alt" title="nlp 2.00">περιϊσταμένους</ins>
           </span>
         </span>
-        <span id="w_254" class="ocr_word" title="bbox 894 2527 936 2586" lang="grc">
+        <span id="w_253_1" class="ocr_word" title="bbox 501 2527 863 2584">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_254_0" class="ocr_word" title="bbox 894 2527 936 2586">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">(ὁ</ins>
+          </span>
+        </span>
+        <span id="w_254_1" class="ocr_word" title="bbox 894 2527 936 2586">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 972 2525 1147 2585" lang="grc">
@@ -1383,21 +1393,16 @@
             <ins class="alt" title="nlp 1.00">διδόναι</ins>
           </span>
         </span>
-        <span id="w_259" class="ocr_word" title="bbox 1792 2524 1850 2580" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὴ</ins>
-          </span>
-        </span>
-        <span id="w_260" class="ocr_word" title="bbox 1895 2523 2105 2579" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνοχλεῖν,</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 317 2596 1496 2656">
-        <span id="w_261" class="ocr_word" title="bbox 317 2600 488 2645" lang="grc">
+        <span id="w_261_0" class="ocr_word" title="bbox 317 2600 488 2645">
           <span class="alternatives">
-            <ins title="nlp 2.00">30 καθά</ins>
+            <ins class="alt" title="nlp 2.00">30</ins>
+          </span>
+        </span>
+        <span id="w_261_1" class="ocr_word" title="bbox 317 2600 488 2645">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καθά</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 519 2611 628 2656" lang="grc">
@@ -1521,7 +1526,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1591 2736 1688 2796" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ω)ς</ins>
+            <ins title="nlp 2.00">ω)ς</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1731 2736 1977 2792" lang="grc">
@@ -1558,7 +1563,7 @@
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1366 2808 1562 2868" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(μικρὸν)</ins>
+            <ins title="nlp 2.00">μικρὸν)</ins>
           </span>
         </span>
         <span id="w_293" class="ocr_word" title="bbox 1598 2807 1826 2866" lang="grc">
@@ -1594,9 +1599,14 @@
             <ins class="alt" title="nlp 1.00">πόθεν</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 889 2940 988 2989">
+        <span id="w_299_0" class="ocr_word" title="bbox 889 2940 988 2989">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;δέ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;δέ&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_299_1" class="ocr_word" title="bbox 889 2940 988 2989">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_300" class="ocr_word" title="bbox 1014 2937 1098 2975" lang="grc">
@@ -1655,11 +1665,6 @@
         <span id="w_310" class="ocr_word" title="bbox 2006 2939 2049 2970">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">21</ins>
-          </span>
-        </span>
-        <span id="w_311" class="ocr_word" title="bbox 2078 2935 2111 2970" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἰ</ins>
           </span>
         </span>
       </span>
@@ -1781,21 +1786,24 @@
             <del title="nlp 0.90">significavi,</del>
           </span>
         </span>
-        <span id="w_332" class="ocr_word" title="bbox 1329 3046 1448 3093" lang="grc">
+        <span id="w_332_0" class="ocr_word" title="bbox 1329 3046 1448 3093">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὥστε δεδιότας&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ὥστε</ins>
           </span>
         </span>
-        <span id="w_334" class="ocr_word" title="bbox 1698 3043 1817 3088">
+        <span id="w_332_1" class="ocr_word" title="bbox 1329 3046 1448 3093">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suppl.</ins>
-            <del title="nlp 0.90">suppl.</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_335" class="ocr_word" title="bbox 1846 3041 2015 3077">
+        <span id="w_334_0" class="ocr_word" title="bbox 1698 3043 1817 3088">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Cobetus.</ins>
-            <del title="nlp 0.90">Cobetus.</del>
+            <ins class="alt" title="nlp 2.00">δεδιότας&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_334_1" class="ocr_word" title="bbox 1698 3043 1817 3088">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">suppl.</ins>
           </span>
         </span>
       </span>
@@ -1860,9 +1868,9 @@
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_347" class="ocr_word" title="bbox 1906 3093 2110 3143" lang="grc">
+        <span id="w_347_0" class="ocr_word" title="bbox 1906 3093 2110 3143">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἐπι&amp;#x003E;στήμης.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;ἐπι&amp;003E;στήμης.</ins>
           </span>
         </span>
       </span>
@@ -1879,20 +1887,20 @@
             <del title="nlp 0.90">ind.</del>
           </span>
         </span>
-        <span id="w_351" class="ocr_word" title="bbox 690 3155 810 3191">
+        <span id="w_351_0" class="ocr_word" title="bbox 690 3155 810 3191">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_351_1" class="ocr_word" title="bbox 690 3155 810 3191">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_352" class="ocr_word" title="bbox 838 3167 872 3190">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">n.</ins>
             <del title="nlp 0.90">n.</del>
-          </span>
-        </span>
-        <span id="w_353" class="ocr_word" title="bbox 893 3158 973 3190">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">481.</ins>
           </span>
         </span>
       </span>
