--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0183.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0183.html
@@ -45,7 +45,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1237 261 1496 319" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἔ)χθεσι(ν)</ins>
+            <ins title="nlp 2.00">ἔ)χθεσι(ν)</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1540 263 1585 319" lang="grc">
@@ -60,7 +60,7 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1863 263 1998 321" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ποι)-</ins>
+            <ins title="nlp 2.00">ποι)-</ins>
           </span>
         </span>
       </span>
@@ -1609,9 +1609,14 @@
             <ins class="alt" title="nlp 1.00">δύο,</ins>
           </span>
         </span>
-        <span id="w_313" class="ocr_word" title="bbox 746 2691 977 2734" lang="grc">
+        <span id="w_313_0" class="ocr_word" title="bbox 746 2691 977 2734">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μὔνοστον</ins>
+            <ins class="alt" title="nlp 2.00">Εὔνοστον</ins>
+          </span>
+        </span>
+        <span id="w_313_1" class="ocr_word" title="bbox 746 2691 977 2734">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_314" class="ocr_word" title="bbox 1007 2688 1080 2733" lang="grc">
@@ -1632,12 +1637,6 @@
         <span id="w_317" class="ocr_word" title="bbox 1734 2715 1789 2721">
           <span class="alternatives">
             <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_318" class="ocr_word" title="bbox 1812 2689 2007 2734">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Clemens</ins>
-            <del title="nlp 0.90">Clemens</del>
           </span>
         </span>
       </span>
@@ -2041,7 +2040,7 @@
         </span>
         <span id="w_390" class="ocr_word" title="bbox 544 3129 665 3166">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_391" class="ocr_word" title="bbox 691 3129 778 3165" lang="grc">
