--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0184.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0184.html
@@ -178,14 +178,14 @@
             <ins class="alt" title="nlp 1.00">Τύριον</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 655 434 971 492" lang="grc">
+        <span id="w_32_0" class="ocr_word" title="bbox 655 434 971 492">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Πυθαγόραν)</ins>
+            <ins class="alt" title="nlp 2.00">(Πυθαγόραν)</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 1004 434 1237 491" lang="grc">
+        <span id="w_32_1" class="ocr_word" title="bbox 655 434 971 492">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὀνομάζει.]</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -617,14 +617,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 281 1145 2024 1205">
-        <span id="w_117" class="ocr_word" title="bbox 281 1152 489 1198" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 281 1152 489 1198">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἔλαθεν· ὁ δὲ Προμηθεὺς&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ἔλαθεν·</ins>
+          </span>
+        </span>
+        <span id="w_117_1" class="ocr_word" title="bbox 281 1152 489 1198">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1005 1163 1083 1190" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕνα</ins>
+            <ins title="nlp 2.00">ὁ δὲ Προμηθεὺς&amp;x003E; ἕνα</ins>
           </span>
         </span>
         <span id="w_122" class="ocr_word" title="bbox 1127 1163 1216 1190" lang="grc">
@@ -640,11 +645,6 @@
         <span id="w_124" class="ocr_word" title="bbox 1528 1145 1735 1201" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ποιμένα,</ins>
-          </span>
-        </span>
-        <span id="w_125" class="ocr_word" title="bbox 1771 1148 2024 1202" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Καύκασον,</ins>
           </span>
         </span>
       </span>
@@ -1194,9 +1194,14 @@
             <ins class="alt" title="nlp 1.00">ἣν</ins>
           </span>
         </span>
-        <span id="w_236" class="ocr_word" title="bbox 1252 2003 1354 2058">
+        <span id="w_236_0" class="ocr_word" title="bbox 1252 2003 1354 2058">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;αἱ&amp;#x003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;αἱ&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_236_1" class="ocr_word" title="bbox 1252 2003 1354 2058">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 1386 2010 1591 2057" lang="grc">
@@ -1207,11 +1212,6 @@
         <span id="w_238" class="ocr_word" title="bbox 1622 2018 1751 2059" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἔαρος</ins>
-          </span>
-        </span>
-        <span id="w_239" class="ocr_word" title="bbox 1782 2001 2030 2058" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀρχομένου</ins>
           </span>
         </span>
       </span>
