--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0185.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0185.html
@@ -243,8 +243,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 702 622 841 666">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 868 621 950 666">
@@ -268,19 +267,19 @@
             <ins class="alt" title="nlp 1.00">ποτε</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 1365 622 1687 678" lang="grc">
+        <span id="w_49_0" class="ocr_word" title="bbox 1365 622 1687 678">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὀνειδιξόμενος</ins>
+            <ins class="alt" title="nlp 2.00">ὀνειδιζόμενος</ins>
+          </span>
+        </span>
+        <span id="w_49_1" class="ocr_word" title="bbox 1365 622 1687 678">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1718 621 1777 673" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
-          </span>
-        </span>
-        <span id="w_51" class="ocr_word" title="bbox 1808 622 1955 672" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δειλός</ins>
           </span>
         </span>
       </span>
@@ -325,8 +324,7 @@
         </span>
         <span id="w_59" class="ocr_word" title="bbox 704 765 841 809">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 868 764 951 809">
@@ -372,9 +370,14 @@
             <ins class="alt" title="nlp 1.00">γῆρας</ins>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 378 837 540 894" lang="grc">
+        <span id="w_68_0" class="ocr_word" title="bbox 378 837 540 894">
           <span class="alternatives">
-            <ins title="nlp 2.00">„κὰγώ,</ins>
+            <ins class="alt" title="nlp 2.00">„κἀγώ,</ins>
+          </span>
+        </span>
+        <span id="w_68_1" class="ocr_word" title="bbox 378 837 540 894">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 573 839 673 893" lang="grc">
@@ -405,11 +408,6 @@
         <span id="w_74" class="ocr_word" title="bbox 1443 838 1726 892" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πανταχόθεν</ins>
-          </span>
-        </span>
-        <span id="w_75" class="ocr_word" title="bbox 1769 835 1958 892" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐμαυτὸν</ins>
           </span>
         </span>
       </span>
@@ -474,8 +472,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 691 980 828 1024">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 852 978 933 1022">
@@ -1253,8 +1250,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 705 2126 843 2170">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 870 2126 954 2170">
@@ -1991,19 +1987,19 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_373" class="ocr_word" title="bbox 1415 3036 1484 3068">
+        <span id="w_373_0" class="ocr_word" title="bbox 1415 3036 1484 3068">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">470—472.</ins>
+          </span>
+        </span>
+        <span id="w_373_1" class="ocr_word" title="bbox 1415 3036 1484 3068">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_376" class="ocr_word" title="bbox 1756 3036 1800 3067">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">24</ins>
-          </span>
-        </span>
-        <span id="w_377" class="ocr_word" title="bbox 1826 3031 1963 3076" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">προσήνεγκεν</ins>
           </span>
         </span>
       </span>
@@ -2054,19 +2050,19 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_387" class="ocr_word" title="bbox 1507 3090 1577 3123">
+        <span id="w_387_0" class="ocr_word" title="bbox 1507 3090 1577 3123">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">474—476.</ins>
+          </span>
+        </span>
+        <span id="w_387_1" class="ocr_word" title="bbox 1507 3090 1577 3123">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 1829 3090 1874 3121">
           <span class="alternatives">
             <ins title="nlp 2.00">30</ins>
-          </span>
-        </span>
-        <span id="w_391" class="ocr_word" title="bbox 1900 3083 1965 3121">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ναί</ins>
           </span>
         </span>
       </span>
@@ -2094,9 +2090,14 @@
             <del title="nlp 0.90">fortasse:</del>
           </span>
         </span>
-        <span id="w_396" class="ocr_word" title="bbox 712 3137 793 3189">
+        <span id="w_396_0" class="ocr_word" title="bbox 712 3137 793 3189">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἦ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;ἦ&amp;003E;</ins>
+          </span>
+        </span>
+        <span id="w_396_1" class="ocr_word" title="bbox 712 3137 793 3189">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_397" class="ocr_word" title="bbox 819 3141 894 3178">
@@ -2112,12 +2113,6 @@
         <span id="w_399" class="ocr_word" title="bbox 994 3141 1107 3187" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἔφησε</ins>
-          </span>
-        </span>
-        <span id="w_400" class="ocr_word" title="bbox 1134 3140 1171 3178">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P.</ins>
-            <del title="nlp 0.90">P.</del>
           </span>
         </span>
       </span>
