--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0186.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0186.html
@@ -211,9 +211,9 @@
             <del title="nlp 0.90">sententia</del>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1997 445 2063 487">
+        <span id="w_34_0" class="ocr_word" title="bbox 1997 445 2063 487">
           <span class="alternatives">
-            <ins title="nlp 2.00">dedukisset,</ins>
+            <ins class="alt" title="nlp 2.00">deduxisset,</ins>
           </span>
         </span>
       </span>
@@ -411,7 +411,7 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 906 722 1056 765">
           <span class="alternatives">
-            <ins title="nlp 2.00">dolor.“</ins>
+            <ins title="nlp 2.00">“</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 1116 727 1204 766">
@@ -776,8 +776,7 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 821 1290 960 1334">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 988 1290 1071 1334">
@@ -1481,12 +1480,12 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 439 2288 466 2329" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">δ</ins>
+            <ins title="nlp 2.00">δ</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 492 2285 634 2343" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">611).“</ins>
+            <ins title="nlp 2.00">“</ins>
           </span>
         </span>
         <span id="w_272" class="ocr_word" title="bbox 679 2313 732 2318">
@@ -1502,14 +1501,12 @@
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1015 2289 1154 2331">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_275" class="ocr_word" title="bbox 1180 2287 1264 2331">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">VH</ins>
-            <del title="nlp 0.90">VH</del>
+            <ins title="nlp 2.00">VII</ins>
           </span>
         </span>
         <span id="w_276" class="ocr_word" title="bbox 1291 2289 1386 2332">
@@ -1857,9 +1854,14 @@
             <ins class="alt" title="nlp 1.00">661</ins>
           </span>
         </span>
-        <span id="w_339" class="ocr_word" title="bbox 1293 2833 1452 2880">
+        <span id="w_339_0" class="ocr_word" title="bbox 1293 2833 1452 2880">
           <span class="alternatives">
-            <ins title="nlp 2.00">Nanck).</ins>
+            <ins class="alt" title="nlp 2.00">Nauck).</ins>
+          </span>
+        </span>
+        <span id="w_339_1" class="ocr_word" title="bbox 1293 2833 1452 2880">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1599 2837 1642 2869">
@@ -1870,11 +1872,6 @@
         <span id="w_341" class="ocr_word" title="bbox 1669 2831 1818 2876" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πλείους</ins>
-          </span>
-        </span>
-        <span id="w_342" class="ocr_word" title="bbox 1855 2832 2068 2883" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;παιδείᾳ&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -1890,9 +1887,14 @@
             <ins class="alt" title="nlp 1.00">πλείους</ins>
           </span>
         </span>
-        <span id="w_345" class="ocr_word" title="bbox 688 2885 858 2935">
+        <span id="w_345_0" class="ocr_word" title="bbox 688 2885 858 2935">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἀρετῇ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ἀρετῇ&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_345_1" class="ocr_word" title="bbox 688 2885 858 2935">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 884 2887 1056 2923">
@@ -1931,12 +1933,6 @@
         <span id="w_352" class="ocr_word" title="bbox 1732 2886 1957 2924" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ὑποτίθεσαι</ins>
-          </span>
-        </span>
-        <span id="w_353" class="ocr_word" title="bbox 1983 2890 2066 2935">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(om.</ins>
-            <del title="nlp 0.90">(om.</del>
           </span>
         </span>
       </span>
