--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0187.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0187.html
@@ -36,8 +36,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 771 284 908 327">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laiirt.</ins>
-            <del title="nlp 0.90">Laiirt.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 935 283 1015 327">
@@ -629,16 +628,11 @@
             <ins class="alt" title="nlp 1.00">φίλοις</ins>
           </span>
         </span>
-        <span id="w_121" class="ocr_word" title="bbox 1886 1084 2023 1124" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">παρα-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 277 1140 540 1198">
-        <span id="w_122" class="ocr_word" title="bbox 277 1140 540 1198" lang="grc">
+        <span id="w_122_0" class="ocr_word" title="bbox 277 1140 540 1198">
           <span class="alternatives">
-            <ins title="nlp 2.00">χωρητέον.“</ins>
+            <ins class="alt" title="nlp 2.00">παραχωρητέον.“</ins>
           </span>
         </span>
       </span>
@@ -656,8 +650,7 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 768 1212 905 1255">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 933 1212 1015 1255">
@@ -854,8 +847,7 @@
         </span>
         <span id="w_162" class="ocr_word" title="bbox 768 1497 905 1541">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_163" class="ocr_word" title="bbox 927 1496 1011 1540">
@@ -1111,7 +1103,7 @@
         </span>
         <span id="w_212" class="ocr_word" title="bbox 816 1857 1037 1911" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μαλακός</ins>
+            <ins title="nlp 2.00">„μαλακός</ins>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 1069 1856 1228 1897" lang="grc">
@@ -1494,7 +1486,7 @@
       <span class="ocr_line" title="bbox 413 2747 1014 2808">
         <span id="w_279" class="ocr_word" title="bbox 413 2749 447 2792" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">1. Ἀρχαιολογία</ins>
+            <ins title="nlp 2.00">Ἀρχαιολογία</ins>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 878 2747 1014 2808">
