--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0188.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0188.html
@@ -116,9 +116,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1201 445 1446 488">
+        <span id="w_19_0" class="ocr_word" title="bbox 1201 445 1446 488">
           <span class="alternatives">
-            <ins title="nlp 2.00">564—569.</ins>
+            <ins class="alt" title="nlp 2.00">564—569.</ins>
           </span>
         </span>
       </span>
@@ -904,9 +904,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 1213 2225 1462 2268">
+        <span id="w_162_0" class="ocr_word" title="bbox 1213 2225 1462 2268">
           <span class="alternatives">
-            <ins title="nlp 2.00">552—556.</ins>
+            <ins class="alt" title="nlp 2.00">552—556.</ins>
           </span>
         </span>
       </span>
