--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0189.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0189.html
@@ -103,14 +103,14 @@
             <ins class="alt" title="nlp 1.00">Χαλκοῦ</ins>
           </span>
         </span>
-        <span id="w_17" class="ocr_word" title="bbox 884 507 921 536" lang="grc">
+        <span id="w_17_0" class="ocr_word" title="bbox 884 507 921 536">
           <span class="alternatives">
-            <ins title="nlp 2.00">ν</ins>
+            <ins class="alt" title="nlp 2.00">n.</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 948 492 1047 536">
+        <span id="w_17_1" class="ocr_word" title="bbox 884 507 921 536">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">589.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -141,14 +141,14 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 1121 565 1368 609" lang="grc">
+        <span id="w_24_0" class="ocr_word" title="bbox 1121 565 1368 609">
           <span class="alternatives">
-            <ins title="nlp 2.00">478—580.</ins>
+            <ins class="alt" title="nlp 2.00">578—580.</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 2022 589 2042 618">
+        <span id="w_24_1" class="ocr_word" title="bbox 1121 565 1368 609">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -218,9 +218,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 1021 778 1269 823">
+        <span id="w_38_0" class="ocr_word" title="bbox 1021 778 1269 823">
           <span class="alternatives">
-            <ins title="nlp 2.00">587—588.</ins>
+            <ins class="alt" title="nlp 2.00">587—588.</ins>
           </span>
         </span>
       </span>
@@ -286,7 +286,7 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1427 944 1481 958" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">= Περὶ</ins>
+            <ins title="nlp 2.00">Περὶ</ins>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1637 924 1828 982" lang="grc">
@@ -395,9 +395,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 382 1206 1242 1264">
-        <span id="w_70" class="ocr_word" title="bbox 382 1207 451 1250" lang="grc">
+        <span id="w_70_0" class="ocr_word" title="bbox 382 1207 451 1250">
           <span class="alternatives">
-            <ins title="nlp 2.00">57. Ὑπομνήματα</ins>
+            <ins class="alt" title="nlp 2.00">57.</ins>
+          </span>
+        </span>
+        <span id="w_70_1" class="ocr_word" title="bbox 382 1207 451 1250">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ὑπομνήματα</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 873 1209 1047 1251" lang="grc">
@@ -449,8 +454,7 @@
         </span>
         <span id="w_79" class="ocr_word" title="bbox 763 1697 899 1742">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_80" class="ocr_word" title="bbox 927 1698 1010 1742">
@@ -689,9 +693,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 328 2199 957 2257">
-        <span id="w_123" class="ocr_word" title="bbox 328 2199 486 2256" lang="grc">
+        <span id="w_123_0" class="ocr_word" title="bbox 328 2199 486 2256">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;περὶ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;περὶ&amp;003E;</ins>
+          </span>
+        </span>
+        <span id="w_123_1" class="ocr_word" title="bbox 328 2199 486 2256">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 518 2212 764 2257" lang="grc">
@@ -703,11 +712,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">n.</ins>
             <del title="nlp 0.90">n.</del>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 860 2200 957 2243">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">626.</ins>
           </span>
         </span>
       </span>
@@ -926,9 +930,14 @@
             <ins class="alt" title="nlp 1.00">λόγω</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 878 3103 933 3139" lang="grc">
+        <span id="w_165_0" class="ocr_word" title="bbox 878 3103 933 3139">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐν</ins>
+            <ins class="alt" title="nlp 2.00">(ἐν</ins>
+          </span>
+        </span>
+        <span id="w_165_1" class="ocr_word" title="bbox 878 3103 933 3139">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 958 3105 1065 3148">
@@ -969,17 +978,12 @@
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1640 3107 1676 3150" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(η</ins>
+            <ins title="nlp 2.00">η</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1704 3104 1765 3149">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_175" class="ocr_word" title="bbox 1793 3104 1819 3139">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(η Β2) P</ins>
           </span>
         </span>
       </span>
