--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0190.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0190.html
@@ -328,8 +328,7 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 744 1577 880 1619">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 912 1576 991 1619">
@@ -774,9 +773,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_141" class="ocr_word" title="bbox 868 2218 1067 2268" lang="grc">
+        <span id="w_141_0" class="ocr_word" title="bbox 868 2218 1067 2268">
           <span class="alternatives">
-            <ins title="nlp 2.00">Στω¨Πικὸς</ins>
+            <ins class="alt" title="nlp 2.00">Στωϊκὸς</ins>
+          </span>
+        </span>
+        <span id="w_141_1" class="ocr_word" title="bbox 868 2218 1067 2268">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 1099 2221 1228 2273" lang="grc">
@@ -807,11 +811,6 @@
         <span id="w_147" class="ocr_word" title="bbox 1682 2216 1870 2270" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μεγάλας</ins>
-          </span>
-        </span>
-        <span id="w_148" class="ocr_word" title="bbox 1901 2230 1984 2270" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φύσεις</ins>
           </span>
         </span>
       </span>
@@ -1104,9 +1103,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_207" class="ocr_word" title="bbox 1753 2645 1985 2686" lang="grc">
+        <span id="w_207_0" class="ocr_word" title="bbox 1753 2645 1985 2686">
           <span class="alternatives">
-            <ins title="nlp 2.00">συστελλομ;νων</ins>
+            <ins class="alt" title="nlp 2.00">συστελλομένων</ins>
           </span>
         </span>
       </span>
@@ -1114,11 +1113,6 @@
         <span id="w_208" class="ocr_word" title="bbox 201 2739 236 2765">
           <span class="alternatives">
             <ins title="nlp 2.00">35</ins>
-          </span>
-        </span>
-        <span id="w_209" class="ocr_word" title="bbox 254 2721 399 2775" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένων</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 431 2719 594 2774" lang="grc">
