--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0191.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0191.html
@@ -163,14 +163,24 @@
             <ins title="nlp 2.00">ἀποκρίνασθαι</ins>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 553 480 732 522" lang="grc">
+        <span id="w_31_0" class="ocr_word" title="bbox 553 480 732 522">
           <span class="alternatives">
-            <ins title="nlp 2.00">ε'πόντα</ins>
+            <ins class="alt" title="nlp 2.00">εἰπόντα</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 765 495 818 521" lang="grc">
+        <span id="w_31_1" class="ocr_word" title="bbox 553 480 732 522">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὺ</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_32_0" class="ocr_word" title="bbox 765 495 818 521">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὐ</ins>
+          </span>
+        </span>
+        <span id="w_32_1" class="ocr_word" title="bbox 765 495 818 521">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 850 495 991 522" lang="grc">
@@ -191,16 +201,6 @@
         <span id="w_36" class="ocr_word" title="bbox 1507 481 1621 523" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἰσὶν</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 1645 481 1804 536" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ὄρνεις,</ins>
-          </span>
-        </span>
-        <span id="w_38" class="ocr_word" title="bbox 1834 479 1938 524" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
           </span>
         </span>
       </span>
@@ -314,19 +314,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 189 692 919 747">
-        <span id="w_61" class="ocr_word" title="bbox 304 693 444 747" lang="grc">
+        <span id="w_61_0" class="ocr_word" title="bbox 304 693 444 747">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;κἂν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;κἂν&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_61_1" class="ocr_word" title="bbox 304 693 444 747">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 476 693 618 744" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄλλως</ins>
-          </span>
-        </span>
-        <span id="w_63" class="ocr_word" title="bbox 650 692 919 747" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀποβαίνειν</ins>
           </span>
         </span>
       </span>
@@ -344,8 +344,7 @@
         </span>
         <span id="w_66" class="ocr_word" title="bbox 685 764 824 807">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 852 763 934 806">
@@ -374,14 +373,14 @@
             <ins class="alt" title="nlp 1.00">ἀπῄει</ins>
           </span>
         </span>
-        <span id="w_72" class="ocr_word" title="bbox 1722 763 1766 821" lang="grc">
+        <span id="w_72_0" class="ocr_word" title="bbox 1722 763 1766 821">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ</ins>
+            <ins class="alt" title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 1792 768 1936 821" lang="grc">
+        <span id="w_72_1" class="ocr_word" title="bbox 1722 763 1766 821">
           <span class="alternatives">
-            <ins title="nlp 2.00">Σφαῖρος)</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1333,7 +1332,7 @@
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1239 2265 1542 2320">
           <span class="alternatives">
-            <ins title="nlp 2.00">obtemperans“</ins>
+            <ins title="nlp 2.00">“</ins>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 1572 2265 1633 2308">
@@ -1341,9 +1340,9 @@
             <ins title="nlp 2.00">vel</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 1670 2268 1942 2318" lang="grc">
+        <span id="w_256_0" class="ocr_word" title="bbox 1670 2268 1942 2318">
           <span class="alternatives">
-            <ins title="nlp 2.00">„consruatio</ins>
+            <ins class="alt" title="nlp 2.00">„conservatio</ins>
           </span>
         </span>
       </span>
@@ -1414,9 +1413,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 191 2407 1944 2464">
-        <span id="w_268" class="ocr_word" title="bbox 191 2407 459 2462">
+        <span id="w_268_0" class="ocr_word" title="bbox 191 2407 459 2462">
           <span class="alternatives">
-            <ins title="nlp 2.00">repellendis“</ins>
+            <ins class="alt" title="nlp 2.00">repellendis“</ins>
+          </span>
+        </span>
+        <span id="w_268_1" class="ocr_word" title="bbox 191 2407 459 2462">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 502 2408 564 2451">
@@ -1446,12 +1450,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">contrariarumque</ins>
             <del title="nlp 0.90">contrariarumque</del>
-          </span>
-        </span>
-        <span id="w_274" class="ocr_word" title="bbox 1871 2414 1944 2452">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aut</ins>
-            <del title="nlp 0.90">aut</del>
           </span>
         </span>
       </span>
@@ -1491,14 +1489,14 @@
             <ins title="nlp 2.00">stabile</ins>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 1625 2481 1852 2523">
+        <span id="w_281_0" class="ocr_word" title="bbox 1625 2481 1852 2523">
           <span class="alternatives">
-            <ins title="nlp 2.00">iudicium“</ins>
+            <ins class="alt" title="nlp 2.00">iudicium“</ins>
           </span>
         </span>
-        <span id="w_282" class="ocr_word" title="bbox 1883 2480 1944 2523">
+        <span id="w_281_1" class="ocr_word" title="bbox 1625 2481 1852 2523">
           <span class="alternatives">
-            <ins title="nlp 2.00">vel</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1775,7 +1773,7 @@
         </span>
         <span id="w_329" class="ocr_word" title="bbox 445 2868 482 2912" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(η</ins>
+            <ins title="nlp 2.00">η</ins>
           </span>
         </span>
         <span id="w_330" class="ocr_word" title="bbox 509 2866 569 2912">
@@ -1886,7 +1884,7 @@
         </span>
         <span id="w_350" class="ocr_word" title="bbox 1241 2920 1312 2965" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἴφη</ins>
+            <ins title="nlp 2.00">ἔφη</ins>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1339 2919 1382 2955">
@@ -1998,16 +1996,11 @@
         </span>
         <span id="w_370" class="ocr_word" title="bbox 1836 2973 1945 3018" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σπέρ-</ins>
+            <ins title="nlp 2.00">σπέρματος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 197 3026 1945 3071">
-        <span id="w_371" class="ocr_word" title="bbox 197 3039 312 3071" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ματος</ins>
-          </span>
-        </span>
         <span id="w_372" class="ocr_word" title="bbox 336 3026 453 3062">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">habet</ins>
@@ -2016,8 +2009,7 @@
         </span>
         <span id="w_373" class="ocr_word" title="bbox 478 3026 649 3062">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">LaSrtius</ins>
-            <del title="nlp 0.90">LaSrtius</del>
+            <ins title="nlp 2.00">Laërtius</ins>
           </span>
         </span>
         <span id="w_374" class="ocr_word" title="bbox 675 3027 714 3061">
